# 45-amino-lean

./: .gitignore  CMakeLists.txt  MINIMUM_NEEDS  README.md
include/: amino.h
include/amino/: clapack.h  debug.h  math.h  time.h  validate.h
src/: debug.c  la.c  math.c  mem.c  time.c  validate.c
